debhelper (13.2.2) UNRELEASED; urgency=medium

  * dh_md5sums: When reading the conffiles file, ignore every line
    except those starting with a slash "/".

 -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000

debhelper (13.2.1) unstable; urgency=medium

  [ Niels Thykier ]
  * debian/changelog: Fix some typos in previous entries.
  * Dh_Lib.pm,Dh_Buildsystems.pm: Properly clear buildflags with
    --reload-all-buildenv-variables is passed.  Thanks to
    Harald Welte and Guillem Jover for reporting and debugging
    the issue.  (Closes: #966689)
  * dh_missing: Improve message about related files found.  Thanks
    to Diego Escalante for reporting the issue.  (Closes: #966834)

  [ Peter Pentchev ]
  * dh_installalternatives: Correct order of values in the example for
    Dependents links.  (Closes: #966285)

  [ Chris Lamb ]
  * dh_missing: Sort order of missing files to make output
    deterministic.  (Closes: #968187)

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #964784)

 -- Niels Thykier <niels@thykier.net>  Sat, 12 Sep 2020 20:27:03 +0000

debhelper (13.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_missing: Explicitly remind people that they should not
    copy-waste multi-arch paths directly into debian/not-installed.
    Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
    to replace the hardcoded value.
  * d/changelog: Clarify what dh_installman change in 13.1 related to
    #958343 was about.
  * Dh_Lib.pm: Add support for raising compat deprecation warnings to
    an error if there are pending removals.  This currently triggers
    for usage of compat 5 and 6.
  * cmake.pm: Pass -DCMAKE_SKIP_RPATH=ON -DBUILD_RPATH_USE_ORIGIN=ON
    to cmake in compat 14.  This should fix some reproducibility
    issues but may cause breakage if packages run binaries directly
    from the build directory.  Thanks to Timo Röhling for the
    suggestion.  (Closes: #962474)