@@ -798,14 +798,17 @@ sub _stamp_target {
 				my $system = Debian::Debhelper::Dh_Buildsystems::load_buildsystem(undef, $need);
 				return 0 if defined($system);
 			} elsif ($type eq 'internal') {
-				if ($need ne 'bug#950723') {
+				if ($need eq 'bug#950723') {
+					$all_pkgs //= [ getpackages() ];
+					push(@{$all_pkgs}, map { "${_}@"} getpackages());
+					push(@packages, map { "${_}@"} @packages);
+				} elsif ($need eq 'rrr') {
+					my $req = Debian::Debhelper::Dh_Lib::root_requirements();
+					return 0 if $req ne 'none';
+				} else {
 					warning('Broken internal NOOP hint; should not happen unless someone is using implementation details');
 					error("Unknown internal NOOP type hint in ${command}: ${need}");
 				}
-
-				$all_pkgs //= [ getpackages() ];
-				push(@{$all_pkgs}, map { "${_}@"} getpackages());
-				push(@packages, map { "${_}@"} @packages);
 			} else {
 				# Unknown hint - make no assumptions
 				return 0;
