@@ -2,6 +2,8 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
 
   * dh_md5sums: When reading the conffiles file, ignore every line
     except those starting with a slash "/".
+  * SequencerUtil.pm,dh_testroot: Let dh skip dh_testroot when
+    the builder supports Rules-Requires-Root and it is set to "no".
 
  -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
 
